Updated Return Statements